tests/transpiler/x/java/len_string.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:14 UTC
public class Main {
    public static void main(String[] args) {
        System.out.println(("mochi".length() == null ? "nil" : "mochi".length()));
    }
}
